--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Hotels View</string>
     <string name="facebook_app_id">1363534367356126</string>
     <string name="fb_login_protocol_scheme">fb1363534367356126</string>
+    <string name="title_activity_hotel_maps">Map</string>
 
 </resources>
